--- a/homework-latex/header.sty
+++ b/homework-latex/header.sty
@@ -12,6 +12,9 @@
 \usepackage{graphicx, subfigure} % 插入图片, 允许subfigure
 \usepackage{siunitx} % 更优雅的带单位数字输入
 \usepackage{tikz, circuitikz} % 电路图绘制
+\usepackage{makecell}
+
+\usepackage{listings, xcolor} % 代码块插入
 
 % 由 https://zhuanlan.zhihu.com/p/381769429 摘抄的配置
 \usepackage{framed}
@@ -21,6 +24,34 @@
 \newenvironment{solution}{\par\noindent\textbf{解答. }}{\par}
 \newenvironment{proof}{\par\noindent\textbf{证明. }}{\par}
 \newenvironment{note}{\par\noindent\textbf{题目\arabic{problemname}的注记. }}{\par}
+
+% 由 https://zhuanlan.zhihu.com/p/65441079 摘抄的配置
+\lstset{
+    basicstyle          =   \sffamily,          % 基本代码风格
+    keywordstyle        =   \bfseries,          % 关键字风格
+    commentstyle        =   \rmfamily\itshape,  % 注释的风格，斜体
+    stringstyle         =   \ttfamily,  % 字符串风格
+    flexiblecolumns,                % 别问为什么，加上这个
+    numbers             =   left,   % 行号的位置在左边
+    showspaces          =   false,  % 是否显示空格，显示了有点乱，所以不现实了
+    numberstyle         =   \zihao{-5}\ttfamily,    % 行号的样式，小五号，tt等宽字体
+    showstringspaces    =   false,
+    captionpos          =   t,      % 这段代码的名字所呈现的位置，t指的是top上面
+    frame               =   lrtb,   % 显示边框
+}
+
+\lstdefinestyle{Python}{
+    language        =   Python, % 语言选Python
+    basicstyle      =   \zihao{-5}\ttfamily,
+    numberstyle     =   \zihao{-5}\ttfamily,
+    keywordstyle    =   \color{blue},
+    keywordstyle    =   [2] \color{teal},
+    stringstyle     =   \color{magenta},
+    commentstyle    =   \color{red}\ttfamily,
+    breaklines      =   true,   % 自动换行，建议不要写太长的行
+    columns         =   fixed,  % 如果不加这一句，字间距就不固定，很丑，必须加
+    basewidth       =   0.5em,
+}
 
 \newcommand{\name}{Your Name}
 \newcommand{\studentID}{Your student ID}
