feat(report): finish hw7 and pa3

--- a/homework-latex/homework.tex
+++ b/homework-latex/homework.tex
@@ -20,9 +20,13 @@
 
 \subfile{hw6/hw6.tex}
 
+\subfile{hw7/hw7.tex}
+
 \subfile{pa1/pa1.tex}
 
 \subfile{pa2/pa2.tex}
+
+\subfile{pa3/pa3.tex}
 
 \subfile{proj1/proj1.tex}
 
